# discord-ext-i18n

./: .gitignore  LICENSE  README.md  publish.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  shortcodes.py
.github/workflows/: python-app.yml
discord/ext/i18n/: __init__.py  agent.py  cache.py  i18n.py  language.py  preprocess.py
discord_ext_i18n.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: all_demo.py  all_objects.py  cog_example.py  customized.py  get_started.py  modified_translator.py  optimized.py  pre_cache.py  settings.py  subclasses.py
tests/: test_agent.py  test_cache.py  test_language.py  test_preprocess.py  utils.py
